--- a/index2.html
+++ b/index2.html
@@ -22,7 +22,7 @@
 
 
 <div class="bottom-link">
-    <a href="index1.html" style="font-size: 50px; color: white;">Previous Page</a>
+    <a href="index.html" style="font-size: 50px; color: white;">Previous Page</a>
 </div>
 
 
